PROJECT (UNIXLIKEFS)

set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb -std=c99")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall -std=c99")


SET(SRC_LIST main.c memory/alloc.c)



MESSAGE(STATUS "This is BINARY dir" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir" ${PROJECT_SOURCE_DIR})


# 相关的源文件是SRC_LIST中定义的源文件列表
ADD_EXECUTABLE(main ${SRC_LIST})


